force-app/main/default/objects/Copado_clean_Up__mdt/Copado_clean_Up__mdt.object-meta.xml
<CustomObject>
    <label>Copado clean Up</label>
    <pluralLabel>Copado clean Ups</pluralLabel>
</CustomObject>