force-app/main/default/objects/Copado_clean_Up__mdt/fields/Branches__c.field-meta.xml
<CustomField>
    <fullName>Branches__c</fullName>
    <label>Branches</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>