force-app/main/default/objects/Copado_clean_Up__mdt/fields/Copado_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Copado_API_Key__c</fullName>
    <label>Copado API Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>