force-app/main/default/objects/Copado_clean_Up__mdt/fields/LIMIT__c.field-meta.xml
<CustomField>
    <fullName>LIMIT__c</fullName>
    <label>LIMIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>