force-app/main/default/objects/Copado_clean_Up__mdt/fields/Repository_Id__c.field-meta.xml
<CustomField>
    <fullName>Repository_Id__c</fullName>
    <label>Repository Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>